--- a/templates/equipe/_row.html.twig
+++ b/templates/equipe/_row.html.twig
@@ -1,7 +1,7 @@
 <div class="card mb-1">
     <div class="card-header text-primary">
         <div>
-            <a class='h4' href="{{ path('app_equipe_edit', {id: equipe.id}) }}">{{ equipe.niveau }}</a>
+            <a class='h4' href="{{ path('app_equipe_edit', {id: equipe.id}) }}">{{ club.club.nom }} {{ equipe.numero }} ({{ equipe.niveau }})</a>
             {% if equipe.joueurs|length < equipe.MAXJOUEUR %}
                 <a class="text-secondary" href="{{ path('app_equipe_autocomplete', {id: equipe.id}) }}">Remplissage auto</a>
             {% endif %}
