--- a/templates/equipe/editEquipe.html.twig
+++ b/templates/equipe/editEquipe.html.twig
@@ -2,14 +2,23 @@
 {% set page_title = 'Mon club - Modifier équipe' %}
 {% block content %}
     <div class="bg-info text-white p-3 mb-3">
-        <h1 class="h1">Gérer {{ equipe.niveau }}</h1>
+        <h1 class="h1">Gérer l'équipe {{ equipe.numero }}</h1>
     </div>
     <div class="card mx-3">
         <div class="card-body">
             {{ form_start(form) }}
-                <div>
+                <div class="d-flex">
+                    {{ form_row(form.numero, {'attr': {'class': 'form-control', 'style': 'width: unset;'}}) }}
                     {{ form_row(form.niveau, {'attr': {'class': 'form-control', 'style': 'width: unset;'}}) }}
+                    <div>
+                    {{ form_label(form.priorite) }}
+                    {{ form_widget(form.priorite, {'attr': {'class': 'form-control', 'style': 'width: unset;'}}) }}
+                    </div>
                 </div>
+                <div>
+                    {{ form_help(form.priorite) }}
+                </div>
+                <hr>
                 <div>
                     Joueurs de l'équipe
                     <div class="d-flex">
