--- a/templates/joueur/index.html.twig
+++ b/templates/joueur/index.html.twig
@@ -5,24 +5,24 @@
     <div class="p-3 bg-info text-white h1 d-flex align-items-center">
         <h1 class="mr-3">Mes joueurs</h1> <a class="btn btn-primary" href="{{ path('app_joueur_new') }}">Nouveau joueur</a>
     </div>
-    {% if joueursDispo|length > 0 %}
-        <div class="card mb-3 mx-3">
-            <div class="card-header">Joueurs sur le banc</div>
-            <div class="card-body d-flex flex-wrap mb-1 mr-1">
-                {% for joueur in joueursDispo %}
-                    {% if joueur.equipe is null %}
-                        {% include 'joueur/_card.html.twig' %}
-                    {% endif %}
+    {% if joueursCompet|length > 0 %}
+        <div class="card mb-3  mx-3">
+            <div class="card-header h4 text-info">Joueurs compétitifs</div>
+            <div class="d-flex flex-wrap card-body mb-1 mr-1 flex-row">
+                {% for joueur in joueursCompet %}
+                    {% include 'joueur/_card.html.twig' %}
                 {% endfor %}
             </div>
         </div>
     {% endif %}
-    {% if joueurOccupe|length > 0 %}
+    {% if joueursNonCompet|length > 0 %}
         <div class="card mx-3">
-            <div class="card-header">Autres joueurs</div>
-            <div class="d-flex flex-wrap card-body mb-1 mr-1 flex-row">
-                {% for joueur in joueurOccupe %}
-                    {% include 'joueur/_card.html.twig' %}
+            <div class="card-header h4 text-info">Joueurs non compétitif</div>
+            <div class="card-body d-flex flex-wrap mb-1 mr-1">
+                {% for joueur in joueursNonCompet %}
+                    {% if joueur.equipe is null %}
+                        {% include 'joueur/_card.html.twig' %}
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
