Liste des rencontres par équipe

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_joueur') }}">Mes joueurs</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_rencontre') }}">Rencontres</a>
+                    </li>
                 </ul>
             </div>
         </nav>
