--- a/templates/rencontre/index.html.twig
+++ b/templates/rencontre/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
+{% set page_title = 'MonClub | Liste des rencontres' %}
 
-{% block title %}Hello RencontreController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/pierre/Desktop/Entrainement/MonClub/src/Controller/RencontreController.php'|file_link(0) }}">src/Controller/RencontreController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/pierre/Desktop/Entrainement/MonClub/templates/rencontre/index.html.twig'|file_link(0) }}">templates/rencontre/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block content %}
+    <div class="p-3 text-white bg-info h1">Liste des rencontres</div>
+    <div class="card">
+        {% for numEquipe, rencontre in rencontresParEquipe %}
+            <p class="h2 bg-secondary p-3 text-white">
+                Equipe {{ numEquipe }} : ({{ nbRencontreParEquipe[numEquipe] }} matchs)
+            </p>
+            {% for match in rencontre|sort((a, b) => a.date < b.date) %}
+                <div class="card">
+                    <div class="card-header">
+                        {{ match.date|date('d/m/y') }}
+                    </div>
+                    <div class="card-body d-flex flex-row flew-wrap">
+                        {% for joueur in match.joueurs|sort((a, b) => a.points < b.points) %}
+                            {% include 'joueur/_card.html.twig' %}
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock %}
