--- a/templates/joueur/index.html.twig
+++ b/templates/joueur/index.html.twig
@@ -6,11 +6,12 @@
         <h1 class="mr-3">Mes joueurs</h1> <a class="btn btn-primary" href="{{ path('app_joueur_new') }}">Nouveau joueur</a>
     </div>
     {% if joueursCompet|length > 0 %}
-        <div class="card mb-3  mx-3">
+        <div class="card mb-3 mx-3">
             <div class="card-header h4 text-info">Joueurs compétitifs</div>
-            <div class="d-flex flex-wrap card-body mb-1 mr-1 flex-row">
+            <div class="card-body d-flex flex-row flex-wrap justify-content-around">
+                {% set brulages = brulageCompet %}
                 {% for joueur in joueursCompet %}
-                    {% include 'joueur/_card.html.twig' %}
+                    {% include 'joueur/_detailed_card.html.twig' %}
                 {% endfor %}
             </div>
         </div>
